# lightning-timer

./: .eslintrc.cjs  .gitignore  README.md  index.html  numberpad.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: rust-tests.yml
public/: layer.html  layer_ctrl.html  numberpad.html  timeup.html
script/: build-macos-notarized.sh  build-windows.sh  verify-app.sh
src/: App.tsx  SettingsApp.tsx  index.css  main.tsx  settings-main.tsx  settings-page.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  layer-capability.json  settings-capability.json  timeup-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tests.rs
src/components/: AboutInfo.tsx  Help.tsx  Settings.tsx  TimerControls.tsx  TimerDisplay.tsx
src/i18n/: en.ts  index.ts  ja.ts  useTranslation.ts
