[package]
name = "lightning-timer"
version = "0.1.0"
description = "A lightweight timer application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[[bin]]
name = "lightning-timer"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "dialog-open", "fs-read-file", "fs-read-dir", "fs-remove-file", "window-print", "window-minimize", "window-unminimize", "window-start-dragging", "window-show", "window-close", "shell-open", "fs-write-file", "fs-rename-file", "fs-remove-dir", "fs-copy-file", "fs-create-dir", "window-maximize", "fs-exists", "window-unmaximize", "window-hide", "path-all"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
