[package]
name = "lightning-timer"
version = "0.1.0"
description = "A lightweight timer application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[[bin]]
name = "lightning-timer"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
tauri-plugin-window-state = "2.0"
tauri-plugin-store = "2.0"
dirs = "5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
